--- a/views/login.hbs
+++ b/views/login.hbs
@@ -1,10 +1,10 @@
 <section>
-        <h1>Happy to see you !</h1>
-        <p>Let's meet and eat :)</p>
-    {{#if errorMessage}}
-    <p>{{errorMessage}}</p>
-    {{/if}}
-    <form method="post" action="/signin"></form>
+        <h1>Happy to see you again</h1>
+
+    <form method="post" action="/login">
+        {{#if errorMessage}}
+        <p>{{errorMessage}}</p>
+        {{/if}}
         <div>
             <label for="email">Email</label>
             <input id="email" type="email"  name="email" required value="albertledromadaire@gmail.com">
