login and signup waiting for css

--- a/views/signup.hbs
+++ b/views/signup.hbs
@@ -6,11 +6,11 @@
         <p>{{errorMessage}}</p>
         {{/if}}
         <div>
-            <label for="firstname" class="label-ref label">Name</label>
+            <label for="firstname" >Name</label>
             <input id="firstname" type="text" name="firstName"  value="Albert">
         </div>
         <div>
-            <label for="lastname" class="label-ref label">Last Name</label>
+            <label for="lastname" >Last Name</label>
             <input id="lastname" type="text"  name="lastName" value="le Dromadaire">
         </div>
         <div>
