--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -3,8 +3,48 @@
   <head>
     <title>{{title}}</title>
     <link rel='stylesheet' href='/stylesheets/style.css' />
+    <script src="./javascript/index.js"></script>
   </head>
   <body>
+    
+    <header>
+
+      <nav class="flex">
+        <div id="blank1"></div>
+        <div>
+          <ul class="ul flex">
+            <li>
+              <a href="/" onmousedown="bleep.play()"><span>Our logo</span></a>
+            </li>
+            <li>
+              <a href=""><span>Events</span></a>
+            </li>
+            <li>
+              <a href=""><span>Create event</span></a>
+            </li>
+            <li>
+              <a href=""><span>My events</span></a>
+            </li>
+            <li>
+              <a href=""><span>My profile</span></a>
+            </li>
+            <div id="blank"></div>
+            <li>
+              <a href=""><span>Signup</span></a>
+            </li>
+            <li>
+              <a href=""><span>Login</span></a>
+            </li>
+          </ul>
+        </div>
+      </nav>
+
+    </header>
+
     {{{body}}}
+    <script>
+      var bleep = new Audio();
+      bleep.src = "/sounds/clicksound.mp3";
+    </script>
   </body>
 </html>
