--- a/views/signup.hbs
+++ b/views/signup.hbs
@@ -1,27 +1,29 @@
-<section >
-    <h1>Join the community!</h1>
+<section>
+
 
     <form method="post" action="/signup">
+        <h1>Join the community!</h1>
         {{#if errorMessage}}
         <p>{{errorMessage}}</p>
         {{/if}}
         <div>
-            <label for="firstname" >Name</label>
-            <input id="firstname" type="text" name="firstName"  value="Albert">
+            <label for="firstname">First name</label>
+            <input id="firstname" type="text" name="firstName" value="Albert">
         </div>
         <div>
-            <label for="lastname" >Last Name</label>
-            <input id="lastname" type="text"  name="lastName" value="le Dromadaire">
+            <label for="lastname">Last name</label>
+            <input id="lastname" type="text" name="lastName" value="le Dromadaire">
         </div>
         <div>
-            <label for="email" >Email</label>
-            <input id="email" type="email" name="email"  value="albertledromadaire@gmail.com">
+            <label for="email">Email</label>
+            <input id="email" type="email" name="email" value="albertledromadaire@gmail.com">
         </div>
         <div>
-            <label for="password" >Password</label>
-            <input id="password" type="password"  name="password"  value="1234">
+            <label for="password">Password</label>
+            <input id="password" type="password" name="password" value="1234">
         </div>
-        <button>Create Account</button>
+        <button>Create account</button>
+        <p class="already">Already have an account ?</p><a href="/login">Log In</a>
     </form>
-    <p>Already have an account ? <a href="/login">Log In</a></p>
+
 </section>
