--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -17,23 +17,23 @@
               <a href="/" onmousedown="bleep.play()"><span>Our logo</span></a>
             </li>
             <li>
-              <a href=""><span>Events</span></a>
+              <a href="" onmousedown="bleep.play()"><span>Events</span></a>
             </li>
             <li>
-              <a href=""><span>Create event</span></a>
+              <a href="" onmousedown="bleep.play()"><span>Create event</span></a>
             </li>
             <li>
-              <a href=""><span>My events</span></a>
+              <a href="" onmousedown="bleep.play()"><span>My events</span></a>
             </li>
             <li>
-              <a href=""><span>My profile</span></a>
+              <a href="" onmousedown="bleep.play()"><span>My profile</span></a>
             </li>
             <div id="blank"></div>
             <li>
-              <a href=""><span>Signup</span></a>
+              <a href="" onmousedown="bleep.play()"><span>Signup</span></a>
             </li>
             <li>
-              <a href=""><span>Login</span></a>
+              <a href="" onmousedown="bleep.play()"><span>Login</span></a>
             </li>
           </ul>
         </div>
