--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -6,8 +6,8 @@
 
 body {
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
-  padding-top:5px;
-  padding-bottom:5px;
+  /* padding-top:5px;
+  padding-bottom:5px; */
   background-color:#f5cac3;
 }
 
@@ -16,9 +16,9 @@ a {
 }
 
 nav {
-  width:99.5vw;
+  /* width:99.5vw; */
   margin:0 auto;
-  border-radius: 15px;
+  /* border-radius: 15px; */
   background-color: #f28482;
   padding:12px 0;
 }
@@ -54,7 +54,7 @@ li {
 
 /* Animation */
 .ul li a:hover {
-  background-color: #02c39a;
+  background-color: #f77f00;
   -webkit-transform: rotate(360deg);
   transform: rotate(-15deg);
 }
