--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -47,7 +47,7 @@
     {{{body}}}
     <script>
       var bleep = new Audio();
-      bleep.src = "/sounds/clicksound.mp3";
+      bleep.src = "/sounds/click.mp3";
     </script>
   </body>
 </html>
