--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -23,10 +23,10 @@
               <a href="" onmousedown="bleep.play()"><span>Events</span></a>
             </li>
             <li>
-              <a href="" onmousedown="bleep.play()"><span>Create event</span></a>
+              <a href="/create-event" onmousedown="bleep.play()"><span>Create event</span></a>
             </li>
             <li>
-              <a href="" onmousedown="bleep.play()"><span>My events</span></a>
+              <a href="/my-events" onmousedown="bleep.play()"><span>My events</span></a>
             </li>
             <li>
               <a href="" onmousedown="bleep.play()"><span>My profile</span></a>
