--- a/public/stylesheets/create.css
+++ b/public/stylesheets/create.css
@@ -5,7 +5,7 @@
 }
 
 section {
-    padding: 50px;
+    padding: 25px;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -13,6 +13,15 @@ section {
 
 a {
   color: #00B7FF;
+}
+
+h1 {
+  padding-bottom: 40px;
+}
+
+h3 {
+  padding-bottom:25px;
+  padding-top:15px
 }
 
 #form {
@@ -29,6 +38,8 @@ a {
 }
 
 #form input,
+#form select,
+#form textarea,
 #form button {
   box-sizing: border-box;
   font-size: 14px;
@@ -36,6 +47,10 @@ a {
   padding: 4px;
   width: 100%;
   margin-bottom: 20px;
+}
+
+.label {
+  padding-top:25px;
 }
 
 #form button {
