--- a/public/stylesheets/allevents.css
+++ b/public/stylesheets/allevents.css
@@ -13,8 +13,9 @@
 
   .events-wrapper{
     display: flex;
+    flex-wrap: wrap;
     border: 1px solid black;
-    padding: 10p;
+    padding: 10px;
     margin: 10px;
   }
   
@@ -23,17 +24,16 @@
   }
 
   .events-info{
-    flex-direction: row;
     padding: 20px;
     text-align: center;
-    margin: 20px;
-    width: 25%;
+    margin: 1% !important;
+    width: 23%;
     margin: auto;
     border: 1px solid black;
   }
   
   .img_events_all {
-    width: 100px;
+    height: 100px;
   }
 
   p {
