--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -20,24 +20,30 @@
               <a href="/" onmousedown="bleep.play()"><span>Our logo</span></a>
             </li>
             <li>
-              <a href="" onmousedown="bleep.play()"><span>Events</span></a>
+              <a href="/allevents" onmousedown="bleep.play()"><span>Events</span></a>
             </li>
+            {{#if isLoggedIn}}
             <li>
               <a href="/create-event" onmousedown="bleep.play()"><span>Create event</span></a>
             </li>
             <li>
-              <a href="/my-events" onmousedown="bleep.play()"><span>My events</span></a>
+              <a href="/managepage" onmousedown="bleep.play()"><span>My events</span></a>
             </li>
             <li>
-              <a href="" onmousedown="bleep.play()"><span>My profile</span></a>
+              <a href="/myprofile" onmousedown="bleep.play()"><span>My profile</span></a>
+            </li>
+            <li>
+              <a href="/logout" onmousedown="bleep.play()"><span>Logout</span></a>
             </li>
             <div id="blank"></div>
+            {{else}}
             <li>
-              <a href="" onmousedown="bleep.play()"><span>Signup</span></a>
+              <a href="/signup" onmousedown="bleep.play()"><span>Signup</span></a>
             </li>
             <li>
-              <a href="" onmousedown="bleep.play()"><span>Login</span></a>
+              <a href="/login" onmousedown="bleep.play()"><span>Login</span></a>
             </li>
+            {{/if}}
           </ul>
         </div>
       </nav>
