--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -9,7 +9,7 @@
     <script src="./javascript/index.js"></script>
   </head>
   <body>
-    
+    <section>
     <header>
 
       <nav class="flex">
@@ -43,7 +43,7 @@
       </nav>
 
     </header>
-
+</section>
     {{{body}}}
     <script>
       var bleep = new Audio();
