--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -11,6 +11,15 @@ body {
   background-color:#f5cac3;
 }
 
+
+section{
+  background-image: url("../images/home.jpeg");
+  background-size: cover;
+  background-position: center center;
+  background-repeat: no-repeat;
+  height: 100vh;
+}
+
 a {
   color: #00B7FF;
 }
