--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,2 +1,6 @@
 {{!-- <h1>{{title}}</h1> --}}
 {{!-- <p>Welcome to {{title}}</p> --}}
+<section id="backgroundhome">
+
+    <h1>Perfecly Food</h1>
+</section>
