--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,6 +1,19 @@
-{{!-- <h1>{{title}}</h1> --}}
-{{!-- <p>Welcome to {{title}}</p> --}}
-<section id="backgroundhome">
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <script src="./javascript/index.js"></script>
+</head>
+<body>
+    <section id="backgroundhome">
 
-    <h1>Perfecly Food</h1>
-</section>
+        <h1 style="padding-bottom:100px">Perfecly Food</h1>
+
+        <h1 id="textBox"></h1>
+
+
+    </section>
+</body>
+</html>
