--- a/views/all-events.hbs
+++ b/views/all-events.hbs
@@ -26,7 +26,8 @@
       <h4 class="events-title">{{this.type}}</h4>
       <p>Date{{this.date}}</p>
       <p>Diet{{this.restrictions}}</p>
-      <p><a href="/one-event">See more</a></p>
+    
+      <p><a href="/event/{{this._id}}">See more</a></p>
     </div>
     {{/each}}
 
