--- a/views/manage-page.hbs
+++ b/views/manage-page.hbs
@@ -1,23 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel='stylesheet' href='/stylesheets/allevents.css' />
+  <link rel='stylesheet' href='/stylesheets/managepage.css' />
   <title>Document</title>
 </head>
+
 <body>
 
 
-<div class="main-contents-events">
-  <div class="title-div">
+  <div class="main-contents-events">
+    <div class="title-div">
 
-    <h1 class="events-title">Manage Your Events</h1>
-  </div>
+      <h1 class="events-title">Manage Your Events</h1>
+    </div>
 
-{{!-- Sébastien's part --}}
+    {{!-- Sébastien's part --}}
 
-{{!-- <h1>Here are your events</h1>
+    {{!-- <h1>Here are your events</h1>
 <div style="display:flex;flex-wrap:wrap">
   {{#each events}}
   <div style="width:20%">
@@ -29,45 +31,61 @@
   <p>You have no planned event at the moment</p>
   {{/each}}
 </div> --}}
-
+    <h3>As a Host</h3>
     <section class="events-wrapper" style="flex-wrap: wrap;">
 
-    {{#each allEvents}}
-    <div class="events-info" style="width:18%; margin:1%">
-        <p>As a Host</p>
+      {{#each allEvents}}
+      <div class="events-info" style="width:18%; margin:1%">
 
-      <img class="img_events_all" src="{{this.imgPath}}" alt="events_img">
+        <div><img class="img_events_all" src="{{this.imgPath}}" alt="events_img"></div>
 
-      <h3>{{this.eventName}}</h3>
-      <h4 class="events-title">{{this.type}}</h4>
-      <p>Date{{this.date}}</p>
-      <p>Diet{{this.restrictions}}</p>
-      <button>Cancel</button> <button>Edit</button>
-   
-    </div>
-    {{/each}}
+<div>
+        <h3>{{this.eventName}}</h3>
+        <h4 class="events-title">{{this.type}}</h4>
+        <h4>Date</h4>
+        <p>{{this.dateOfEvent}}</p>
+        
+        
+        <h4>Location</h4>
+        <p>{{this.location.city}}</p>
+        
+       
+        <p><a href="">See more...</a></p>
+     
 
-  </section>
-
-  <section class="events-wrapper">
-
-    {{#each allEvents}}
-    <div class="events-info">
-        <p>As a Guest</p>
-
-      <img class="img_events_all" src="{{this.imgPath}}" alt="events_img">
-
-      <h3>{{this.eventName}}</h3>
-      <h4 class="events-title">{{this.type}}</h4>
-      <p>Date{{this.date}}</p>
-      <p>Diet{{this.restrictions}}</p>
-     <button>Cancel</button>
-    </div>
-    {{/each}}
-
-  </section>
+        <button>Cancel</button> <button>Edit</button>
 </div>
+      </div>
+      {{/each}}
 
-  
+    </section>
+    <h3>As a Guest</h3>
+    <section class="events-wrapper" style="flex-wrap: wrap;">
+
+      {{#each allEvents}}
+      <div class="events-info" style="width:18%; margin:1%">
+
+        <img class="img_events_all" src="{{this.imgPath}}" alt="events_img">
+
+        <h3>{{this.eventName}}</h3>
+        <h4 class="events-title">{{this.type}}</h4>
+        <h4>Host</h4>
+        <p>{{this._id}}</p>
+                <h4>Date</h4>
+        <p>{{this.dateOfEvent}}</p>
+        <h4>Location</h4>
+        <p>{{this.location.city}}</p>
+
+        <h4>"Restrictions"</h4>
+        <p>{{this.restrictions}}</p>
+        <button>Cancel</button>
+      </div>
+      {{/each}}
+
+    </section>
+  </div>
+
+
 </body>
+
 </html>
