--- a/views/one-event.hbs
+++ b/views/one-event.hbs
@@ -21,53 +21,61 @@
                 <img class="img" src="{{event.imgPath}}" alt="one_event_main_img">
                 <img class="img" src="{{event.imgPath}}" alt="one_event_host_img">
                 <img class="img" src="{{event.imgPath}}" alt="one_event_food_img">
-                </div>
+            </div>
 
             <div class="one-event-info">
 
                 <h1>
                     {{#if msg}}
-                        {{msg}}
+                    {{msg}}
                     {{/if}}
 
                 </h1>
                 <h2>{{event.eventName}}</h3>
-                <h3>{{event.type}}</h3>
-                 <h4>Date</h4>
-      <p>{{this.dateOfEvent}}</p>
-                <h4>Menu</h4>
-                <h5>Starter</h5>
-                <p>{{event.menu.starter}}</p>
-                <h5>Main</h5>
-                <p>{{event.menu.main}}</p>
-                <h5>Dessert</h5>
-                <p>{{event.menu.dessert}}</p>
-                <h4>Location</h4>
-                <p>{{event.location.city}}</p>
+                    <h3>{{event.type}}</h3>
+                    <h4>Date</h4>
+                    <p>{{this.dateOfEvent}}</p>
+                    <h4>Menu</h4>
+                    <h5>Starter</h5>
+                    <p>{{event.menu.starter}}</p>
+                    <h5>Main</h5>
+                    <p>{{event.menu.main}}</p>
+                    <h5>Dessert</h5>
+                    <p>{{event.menu.dessert}}</p>
+                    <h4>Location</h4>
+                    <p>{{event.location.city}}</p>
+                    <h4>Chef</h4>
+                    <p>{{event.chef.firstName}}</p>
+                    <h4>guests</h4>
 
-                <h4>Maximum number of participants</h4>
-                <p>{{event.maxPeople}}</p>
-                <h4>Price per person</h4>
-                <p>{{event.pricePP}} EUR</p>
-                <h4>Theme of the event</h4>
-                <p>{{event.theme}}</p>
-                <h4>"Restrictions"</h4>
-                <p>{{event.restrictions}}</p>
+                    {{#each event.guests}}
+                    <p>{{this.firstName}}</p>
+                    {{/each}}
+
+
+                    <h4>Maximum number of participants</h4>
+                    <p>{{event.maxPeople}}</p>
+                    <h4>Price per person</h4>
+                    <p>{{event.pricePP}} EUR</p>
+                    <h4>Theme of the event</h4>
+                    <p>{{event.theme}}</p>
+                    <h4>"Restrictions"</h4>
+                    <p>{{event.restrictions}}</p>
 
             </div>
             <div class="buttons-div">
                 <button>Details about the Chef</button>
 
-    {{!-- Appears only if logged in to join an event --}}
+                {{!-- Appears only if logged in to join an event --}}
 
                 {{#if isLoggedIn}}
-                    {{#unless ../isTheChef}}
-                    <form action="/event/{{event._id}}" method="POST">
+                {{#unless isTheChef}}
+                <form action="/event/{{event._id}}" method="POST">
 
                     <button>Join the event</button>
 
-                    </form>
-                    {{/unless}}
+                </form>
+                {{/unless}}
                 {{/if}}
 
                 <button>You need to be logged in</button>
