--- a/views/manage-page.hbs
+++ b/views/manage-page.hbs
@@ -34,7 +34,7 @@
     <h3>As a Host</h3>
     <section class="events-wrapper" style="flex-wrap: wrap;">
 
-      {{#each allEvents}}
+      {{#each hostEvents}}
       <div class="events-info" style="width:18%; margin:1%">
 
         <div><img class="img_events_all" src="{{this.imgPath}}" alt="events_img"></div>
@@ -50,7 +50,7 @@
         <p>{{this.location.city}}</p>
         
        
-        <p><a href="">See more...</a></p>
+        <p><a href="/event/{{this._id}}">See more...</a></p>
      
 
         <button>Cancel</button> <button>Edit</button>
@@ -62,7 +62,10 @@
     <h3>As a Guest</h3>
     <section class="events-wrapper" style="flex-wrap: wrap;">
 
-      {{#each allEvents}}
+
+            
+
+      {{#each guestEvents}}
       <div class="events-info" style="width:18%; margin:1%">
 
         <img class="img_events_all" src="{{this.imgPath}}" alt="events_img">
@@ -70,7 +73,7 @@
         <h3>{{this.eventName}}</h3>
         <h4 class="events-title">{{this.type}}</h4>
         <h4>Host</h4>
-        <p>{{this._id}}</p>
+        <p>{{this.chef.firstName}}</p>
                 <h4>Date</h4>
         <p>{{this.dateOfEvent}}</p>
         <h4>Location</h4>
@@ -78,6 +81,7 @@
 
         <h4>"Restrictions"</h4>
         <p>{{this.restrictions}}</p>
+         <p><a href="/event/{{this._id}}">See more...</a></p>
         <button>Cancel</button>
       </div>
       {{/each}}
