--- a/views/manage-page.hbs
+++ b/views/manage-page.hbs
@@ -53,7 +53,7 @@
         <p><a href="/event/{{this._id}}">See more...</a></p>
      
 
-        <button>Cancel</button> <button>Edit</button>
+        <button><a href="/manage-delete/{{this._id}}">Cancel</a> </button> <p><a href="/myevent/edit/{{this._id}}">Edit</a></p>
 </div>
       </div>
       {{/each}}
@@ -82,7 +82,12 @@
         <h4>"Restrictions"</h4>
         <p>{{this.restrictions}}</p>
          <p><a href="/event/{{this._id}}">See more...</a></p>
-        <button>Cancel</button>
+
+         {{!-- Cancel as a guest --}}
+        <form action="/managepage/{{this._id}}/deleteGuest" method="POST">
+          <button>Cancel</button>
+        </form>
+         {{!-- End of cancelling as a guest --}}
       </div>
       {{/each}}
 
