--- a/views/create-event.hbs
+++ b/views/create-event.hbs
@@ -1,8 +1,8 @@
 
 <section>
-
+<h1>Creating my Event:</h1>
     <form id="form" action="/create-event" method="POST" enctype="multipart/form-data">
-        <h1>Creating my Event:</h1>
+        <article>
         <div>
             <label for="name">Name of my event</label>
             <input type="text" id="name" name="name" placeholder="Forest Cake in my Garden" value="Forest Cake in my Garden" required>
@@ -28,8 +28,8 @@
         </div>
         <div>
             <h3>If restrictions apply?</h3>
-            <label for="restrictions">Hold down the Ctrl (windows) or Command (Mac) button to select multiple options.</label>
-            <select name="restrictions" id="restrictions" multiple size='5'>
+            <label for="restrictions">Hold down the Ctrl (windows) or Command (Mac) button to select multiple options:</label>
+            <select name="restrictions" id="restrictions" multiple size='7'>
                 <option value="-1" disabled>Restrictions</option>
                 {{!-- For each tag created : { _id: 5ea9780162a47f34beb837e3, restrictions: 'Vegetarian', __v: 0 }, (exemple of the first one--}}
                 {{!-- Then we select by default the one in user.restrictions._id  because the User tag contains restrictions: [{ type: Schema.Types.ObjectId, ref: "Tag" }]--}}
@@ -38,10 +38,12 @@
                 {{/each}}
             </select>
         </div>
+    </article>
+    <article>
         <div>
-            <h3>Date &amp; Time</h3>
-            <label for="date">Date of the event</label>
-            <input type="date" id="date" name="date" max="2020-12-31" min="2020-01-01" value="2020-05-03" required>
+            <h3>Date of the event</h3>
+            {{!-- <label for="date"></label> --}}
+            <input type="date" name="date" max="2020-12-31" min="2020-01-01" value="2020-05-03" required>
             {{!-- <label for="time">Time of the event</label>
             <input type="time" id="time" name="date" min="06:00" max="23:59" value="09:30" required> --}}
         </div>
@@ -71,6 +73,7 @@
         </div>
 
         <button>Yummy (｡◕‿◕｡)</button>
+    </article>
     </form>
     
 </section>
