--- a/views/edit_event.hbs
+++ b/views/edit_event.hbs
@@ -49,7 +49,7 @@
             <label for="theme">Add a feast's theme?</label>
             <input type="text" id="theme" name="theme" value="{{event.theme}}">
             <label class="label" for="image">Change the picture?</label>
-            <input type="file" id="image" name="image">
+            <input type="file" id="image" name="imgPath">
             <label class="label" for="information">Complementary information:</label>
             <textarea name="information" id="information"value="{{event.information}}" rows="10"></textarea>
         </div>
