--- a/public/stylesheets/one-event.css
+++ b/public/stylesheets/one-event.css
@@ -41,11 +41,11 @@
     display: flex;
     flex-direction: column;
     
-    border: 1px solid red;
+    /* border: 1px solid red; */
   }
 
 .buttons-div{
-  border: 1px solid red;
+  /* border: 1px solid red; */
   align-items: left;
 }
 
